--- a/styles/partials/_jumbo.scss
+++ b/styles/partials/_jumbo.scss
@@ -83,6 +83,7 @@
   .jumbo-content {
     background: none;
     text-align: center;
+    padding-bottom: 0;
   }
 
   .jumbo-content-prename {
